@@ -5,12 +5,12 @@ import(rJava)
 importFrom(graphics, plot)
 
 exportClasses(graphMCP, gMCPResult, gPADInterim)
-exportMethods(plot, print, getWeights, setWeights, getRejected, getXCoordinates, getYCoordinates, simConfint, setEdge, edgeAttr, "edgeAttr<-", nodeAttr, "nodeAttr<-", getNodes)
+exportMethods(plot, print, getWeights, setWeights, getRejected, "setRejected<-", getXCoordinates, getYCoordinates, simConfint, setEdge, edgeAttr, "edgeAttr<-", nodeAttr, "nodeAttr<-", getNodes)
 
 export(graphGUI)
 export(gMCP, rejectNode, substituteEps, placeNodes)
 export(gMCPReport, graph2latex)
-export(matrix2graph, graph2matrix, bdiagNA, joinGraphs)
+export(matrix2graph, graph2matrix, bdiagNA, joinGraphs, subGraph)
 export(graphAnalysis)
 
 export(BonferroniHolm)
